fix buttons created not having gap

--- a/todo-list/css/style.css
+++ b/todo-list/css/style.css
@@ -73,6 +73,8 @@ body {
 }
 
 #btns {
+    display: flex;
+    gap: 10px;
     flex-shrink: 0;
 }
 
